--- a/starter_file/automl.ipynb
+++ b/starter_file/automl.ipynb
@@ -2,18 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Automated ML\n",
     "\n",
     "TODO: Import Dependencies. In the cell below, import all the dependencies that you will need to complete the project."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
-   "outputs": [],
    "metadata": {
     "gather": {
      "logged": 1598423888013
@@ -27,10 +25,31 @@
       "deleting": false
      }
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "from azureml.core import Workspace, Experiment, Model\n",
+    "from azureml.core.compute import ComputeTarget, AmlCompute\n",
+    "from azureml.data.dataset_factory import TabularDatasetFactory\n",
+    "from azureml.core.compute_target import ComputeTargetException\n",
+    "from azureml.widgets import RunDetails\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from azureml.train.automl import AutoMLConfig\n",
+    "from azureml.widgets import RunDetails\n",
+    "from azureml.core.dataset import Dataset\n",
+    "import joblib\n",
+    "from azureml.core.environment import Environment\n",
+    "from azureml.core.model import InferenceConfig\n",
+    "from azureml.core.webservice import LocalWebservice, AciWebservice\n",
+    "import json\n",
+    "import numpy as np\n",
+    "from azureml.automl.core.shared import constants\n",
+    "import requests"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Dataset\n",
     "\n",
@@ -39,21 +58,11 @@
     "\n",
     "\n",
     "TODO: Get data. In the cell below, write code to access the data you will be using in this project. Remember that the dataset needs to be external."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "ws = Workspace.from_config()\n",
-    "\n",
-    "# choose a name for experiment\n",
-    "experiment_name = 'your experiment name here'\n",
-    "\n",
-    "experiment=Experiment(ws, experiment_name)"
-   ],
-   "outputs": [],
    "metadata": {
     "gather": {
      "logged": 1598423890461
@@ -67,28 +76,70 @@
       "deleting": false
      }
     }
-   }
-  },
-  {
-   "cell_type": "markdown",
+   },
+   "outputs": [],
    "source": [
-    "## AutoML Configuration\n",
+    "# Workspace and Experiment\n",
+    "ws = Workspace.from_config()\n",
     "\n",
-    "TODO: Explain why you chose the automl settings and cofiguration you used below."
-   ],
-   "metadata": {}
+    "experiment_name = 'automl_experiment'\n",
+    "experiment=Experiment(ws, experiment_name)\n",
+    "\n",
+    "print('Workspace name: ' + ws.name, \n",
+    "      'Azure region: ' + ws.location, \n",
+    "      'Subscription id: ' + ws.subscription_id, \n",
+    "      'Resource group: ' + ws.resource_group, sep = '\\n')"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "# TODO: Put your automl settings here\n",
-    "automl_settings = {}\n",
-    "\n",
-    "# TODO: Put your automl config here\n",
-    "automl_config = AutoMLConfig()"
-   ],
+   "metadata": {},
    "outputs": [],
+   "source": [
+    "# Creating Compute Cluster\n",
+    "cluster_name = \"compute-cluster\"\n",
+    "\n",
+    "try:\n",
+    "    compute_cluster = ComputeTarget(workspace=ws, name=cluster_name)\n",
+    "    print('Found existing cluster, use it.')\n",
+    "\n",
+    "except ComputeTargetException:\n",
+    "    compute_config = AmlCompute.provisioning_configuration(\n",
+    "        vm_size='Standard_D2_V2', \n",
+    "        max_nodes=4\n",
+    "    )\n",
+    "\n",
+    "    compute_cluster = ComputeTarget.create(ws, cluster_name, compute_config)\n",
+    "\n",
+    "compute_cluster.wait_for_completion(show_output=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Adding dataset from workspace\n",
+    "dataset = Dataset.get_by_name(ws, name='Heart_Failure_Clinical_Records_Dataset')\n",
+    "Heart_Failure_Clinical_Records_Dataset = dataset.to_pandas_dataframe()\n",
+    "\n",
+    "Heart_Failure_Clinical_Records_Dataset.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## AutoML Configuration\n",
+    "\n",
+    "TODO: Explain why you chose the automl settings and cofiguration you used below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "gather": {
      "logged": 1598429217746
@@ -102,16 +153,31 @@
       "deleting": false
      }
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "# AutoML settings in JSON format\n",
+    "automl_settings = {\n",
+    "    \"experiment_timeout_minutes\":25,\n",
+    "    \"task\":'classification',\n",
+    "    \"primary_metric\":'accuracy',\n",
+    "    \"training_data\":dataset,\n",
+    "    \"label_column_name\":'DEATH_EVENT',\n",
+    "    \"n_cross_validations\":4,\n",
+    "    \"max_concurrent_iterations\": 4,\n",
+    "    \"featurization\": 'auto'\n",
+    "}\n",
+    "\n",
+    "# AutoML config passing the settings and the compute resource\n",
+    "automl_config = AutoMLConfig(\n",
+    "    compute_target=cpu_cluster,\n",
+    "    **automl_settings\n",
+    ")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "# TODO: Submit your experiment\n",
-    "remote_run = experiment.submit(automl_config)"
-   ],
-   "outputs": [],
    "metadata": {
     "gather": {
      "logged": 1598431107951
@@ -125,24 +191,27 @@
       "deleting": false
      }
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "# Submit the experiment\n",
+    "remote_run = experiment.submit(automl_config)"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Run Details\n",
     "\n",
     "OPTIONAL: Write about the different models trained and their performance. Why do you think some models did better than others?\n",
     "\n",
     "TODO: In the cell below, use the `RunDetails` widget to show the different experiments."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
-   "outputs": [],
    "metadata": {
     "gather": {
      "logged": 1598431121770
@@ -156,23 +225,27 @@
       "deleting": false
      }
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "# Showing the output might not work with the newest version of AzureML\n",
+    "RunDetails(remote_run).show()\n",
+    "remote_run.wait_for_completion(show_output=True)"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Best Model\n",
     "\n",
     "TODO: In the cell below, get the best model from the automl experiments and display all the properties of the model.\n",
     "\n"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
-   "outputs": [],
    "metadata": {
     "gather": {
      "logged": 1598431425670
@@ -186,15 +259,22 @@
       "deleting": false
      }
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "# Printing details of the best run\n",
+    "print('Accuracy: ', remote_run.get_metrics('accuracy'))\n",
+    "\n",
+    "best_automl_run, best_automl_model = automl_run.get_output()\n",
+    "print('\\n Best run: ', best_automl_run)\n",
+    "print('\\n Model: ', best_automl_model)\n",
+    "print('\\n Best run details: ', best_automl_run.get_details())\n",
+    "print('\\n Final estimator: ', best_automl_model._final_estimator)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "#TODO: Save the best model"
-   ],
-   "outputs": [],
    "metadata": {
     "gather": {
      "logged": 1598431426111
@@ -208,24 +288,29 @@
       "deleting": false
      }
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "# Save your best automl model\n",
+    "# when not working save it as joblib file\n",
+    "joblib.dump(best_automl_run, 'best-automl-run.pkl')\n",
+    "joblib.dump(best_automl_model, 'best-automl-model.pkl')"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Model Deployment\n",
     "\n",
     "Remember you have to deploy only one of the two models you trained but you still need to register both the models. Perform the steps in the rest of this notebook only if you wish to deploy this model.\n",
     "\n",
     "TODO: In the cell below, register the model, create an inference config and deploy the model as a web service."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
-   "outputs": [],
    "metadata": {
     "gather": {
      "logged": 1598431435189
@@ -239,13 +324,52 @@
       "deleting": false
      }
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "# Can be done in Azure ML Workspace but here within the notebook\n",
+    "model = Model.register(\n",
+    "    workspace=ws,\n",
+    "    model_name = \"best-automl-model\", \n",
+    "    model_path = './best-automl-model.pkl')\n",
+    "best_run.download_file(constants.CONDA_ENV_FILE_PATH, 'myenv.yml')\n",
+    "print(model.name, model.id, model.version, sep='\\t')\n",
+    "\n",
+    "env = Environment.from_conda_specification('myenv', 'myenv.yml')\n",
+    "inference_config = InferenceConfig(entry_script='score.py', environment=env)\n",
+    "\n",
+    "aci_config = AciWebservice.deploy_configuration(\n",
+    "    cpu_cores=1, \n",
+    "    memory_gb=1, \n",
+    "    auth_enabled=True,\n",
+    "    tags = {'name':'failure Prediction'},\n",
+    "    description='Heart failure prediction model'\n",
+    "    )\n",
+    "\n",
+    "service = model.deploy(\n",
+    "    workspace=ws,\n",
+    "    name=\"automl-deploy\",\n",
+    "    models=[model],\n",
+    "    inference_config=inference_config,\n",
+    "    deployment_config=aci_config\n",
+    "    )\n",
+    "\n",
+    "service.wait_for_deployment(show_output=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Enable Logging and check state\n",
+    "service.update(enable_app_insights=True)\n",
+    "print(service.state)"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "TODO: In the cell below, send a request to the web service you deployed to test it."
-   ],
    "metadata": {
     "collapsed": true,
     "gather": {
@@ -260,13 +384,14 @@
       "deleting": false
      }
     }
-   }
+   },
+   "source": [
+    "TODO: In the cell below, send a request to the web service you deployed to test it."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
-   "outputs": [],
    "metadata": {
     "gather": {
      "logged": 1598432707604
@@ -280,13 +405,64 @@
       "deleting": false
      }
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "# URL for the web service\n",
+    "######## ToDo:\n",
+    "scoring_uri = ''\n",
+    "# If the service is authenticated, set the key or token\n",
+    "######## ToDo:\n",
+    "key = ''\n",
+    "\n",
+    "data = {\n",
+    "  \"data\": [\n",
+    "            \"Inputs\":{\n",
+    "                \"data\": [\n",
+    "                    {\n",
+    "                        'age': 75.0, \n",
+    "                        'anaemia': 0.0, \n",
+    "                        'creatinine_phosphokinase': 582.0,\n",
+    "                        'diabetes': 0.0,\n",
+    "                        'ejection_fraction': 20.0,\n",
+    "                        'high_blood_pressure': 1.0,\n",
+    "                        'platelets': 265000.0,\n",
+    "                        'serum_creatinine': 1.9,\n",
+    "                        'serum_sodium': 130.0,\n",
+    "                        'sex': 1.0,\n",
+    "                        'smoking': 0.0,\n",
+    "                        'time': 4.0          \n",
+    "                    }\n",
+    "                ]   \n",
+    "            },\n",
+    "            \"GlobalParameters\": {\n",
+    "            \"method\": \"predict\"\n",
+    "            }\n",
+    "        ]\n",
+    "\n",
+    "}\n",
+    "# Convert to JSON string\n",
+    "input_data = json.dumps(data)\n",
+    "output = service.run(input_data)\n",
+    "\n",
+    "# Set the content type\n",
+    "headers = {'Content-Type': 'application/json'}\n",
+    "\n",
+    "# If authentication is enabled, set the authorization header\n",
+    "headers['Authorization'] = f'Bearer {key}'\n",
+    "\n",
+    "# Make the request and display the response\n",
+    "resp = requests.post(\n",
+    "    scoring_uri, \n",
+    "    input_data, \n",
+    "    headers=headers\n",
+    "    )\n",
+    "    \n",
+    "print(\"prediction \", resp.text)"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "TODO: In the cell below, print the logs of the web service and delete the service"
-   ],
    "metadata": {
     "collapsed": true,
     "gather": {
@@ -301,13 +477,14 @@
       "deleting": false
      }
     }
-   }
+   },
+   "source": [
+    "TODO: In the cell below, print the logs of the web service and delete the service"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
-   "outputs": [],
    "metadata": {
     "jupyter": {
      "outputs_hidden": false,
@@ -318,10 +495,19 @@
       "deleting": false
      }
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "#print the logs of the web service\n",
+    "print(service.get_logs())\n",
+    "\n",
+    "#delete the service\n",
+    "service.delete()"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "**Submission Checklist**\n",
     "- I have registered the model.\n",
@@ -330,13 +516,12 @@
     "- I have deleted the webservice and shutdown all the computes that I have used.\n",
     "- I have taken a screenshot showing the model endpoint as active.\n",
     "- The project includes a file containing the environment details.\n"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [],
-   "metadata": {}
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
