Changing response to json format

--- a/starter_file/automl.ipynb
+++ b/starter_file/automl.ipynb
@@ -458,7 +458,7 @@
     "    headers=headers\n",
     "    )\n",
     "    \n",
-    "print(\"prediction \", resp.text)"
+    "print(\"prediction \", resp.json())"
    ]
   },
   {
