--- a/starter_file/automl.ipynb
+++ b/starter_file/automl.ipynb
@@ -98,7 +98,7 @@
    "outputs": [],
    "source": [
     "# Creating Compute Cluster\n",
-    "cluster_name = \"compute-cluster\"\n",
+    "cluster_name = \"automl-cluster\"\n",
     "\n",
     "try:\n",
     "    compute_cluster = ComputeTarget(workspace=ws, name=cluster_name)\n",
