--- a/starter_file/hyperparameter_tuning.ipynb
+++ b/starter_file/hyperparameter_tuning.ipynb
@@ -140,16 +140,47 @@
    },
    "outputs": [],
    "source": [
-    "# TODO: Create an early termination policy. This is not required if you are using Bayesian sampling.\n",
-    "early_termination_policy = <your policy here>\n",
+    "# Specification of an early termination policy\n",
+    "early_termination_policy = BanditPolicy(\n",
+    "    evaluation_interval=1,\n",
+    "    slack_factor = 0.1,  \n",
+    "    delay_evaluation=4\n",
+    ")\n",
     "\n",
-    "#TODO: Create the different params that you will be using during training\n",
-    "param_sampling = <your params here>\n",
+    "# Specify parameter sampler\n",
+    "param_sampling = RandomParameterSampling( \n",
+    "    {\n",
+    "    \"--C\" : uniform(0.1,1),\n",
+    "    \"--max_iter\" : choice(50, 100, 150, 200)\n",
+    "    }\n",
+    ")\n",
     "\n",
-    "#TODO: Create your estimator and hyperdrive config\n",
-    "estimator = <your estimator here>\n",
+    "# Setup environment for your training run\n",
+    "sklearn_env = Environment.from_conda_specification(\n",
+    "    name='sklearn-env', \n",
+    "    file_path='conda_dependencies.yml'\n",
+    ")\n",
     "\n",
-    "hyperdrive_run_config = <your config here>"
+    "# Create your estimator and hyperdrive config\n",
+    "if \"training\" not in os.listdir():\n",
+    "        os.mkdir(\"./training\")\n",
+    "\n",
+    "estimator = ScriptRunConfig(\n",
+    "    source_directory='.',\n",
+    "    script='train.py',\n",
+    "    compute_target=compute_cluster,\n",
+    "    environment=sklearn_env\n",
+    ")\n",
+    "\n",
+    "hyperdrive_run_config = HyperDriveConfig(\n",
+    "    run_config=estimator,\n",
+    "    hyperparameter_sampling=param_sampling,\n",
+    "    policy=early_termination_policy,\n",
+    "    primary_metric_name='Accuracy',\n",
+    "    primary_metric_goal=PrimaryMetricGoal.MAXIMIZE,\n",
+    "    max_total_runs=10,\n",
+    "    max_concurrent_runs=4\n",
+    ")"
    ]
   },
   {
@@ -171,7 +202,11 @@
    },
    "outputs": [],
    "source": [
-    "#TODO: Submit your experiment"
+    "# Submit your hyperdrive run to the experiment and show run details with the widget.\n",
+    "hyperdrive_run = experiment.submit(\n",
+    "    config=hyperdrive_run_config,\n",
+    "    show_output=True\n",
+    ")"
    ]
   },
   {
@@ -217,7 +252,10 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "RunDetails(hyperdrive_run).show()\n",
+    "hyperdrive_run.wait_for_completion(show_output=True)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -246,7 +284,17 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Get the best model\n",
+    "best_hyperdrive_run = hyperdrive_run.get_best_run_by_primary_metric()\n",
+    "\n",
+    "best_hyperdrive_run_metrics = best_hyperdrive_run.get_metrics()\n",
+    "hyperdrive_parameter_values = best_hyperdrive_run.get_details()['runDefinition']['arguments']\n",
+    "\n",
+    "print('Best Run Id: ', best_hyperdrive_run.id)\n",
+    "print('\\n Accuracy: ', best_hyperdrive_run_metrics['Accuracy'])\n",
+    "print('\\n Hyperparameters: ', hyperdrive_parameter_values)"
+   ]
   },
   {
    "cell_type": "code",
@@ -267,7 +315,8 @@
    },
    "outputs": [],
    "source": [
-    "#TODO: Save the best model"
+    "# Save the best model as joblib and pkl file\n",
+    "joblib.dump(best_hyperdrive_run, 'best-hyperdrive-model.pkl')"
    ]
   },
   {
@@ -297,7 +346,51 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## See for more details: https://github.com/Azure/MachineLearningNotebooks/blob/master/how-to-use-azureml/deployment/deploy-to-cloud/model-register-and-deploy.ipynb\n",
+    "\n",
+    "model = Model.register(\n",
+    "    workspace=ws,\n",
+    "    model_name = \"best-hyperdrive-model\", \n",
+    "    model_path = './best-hyperdrive-model.pkl')\n",
+    "\n",
+    "#best_run.download_file(constants.CONDA_ENV_FILE_PATH, 'conda_dependencies.yml')\n",
+    "print(model.name, model.id, model.version, sep='\\t')\n",
+    "\n",
+    "inference_config = InferenceConfig(\n",
+    "    entry_script='score_hyperdrive.py', \n",
+    "    environment=sklearn_env\n",
+    ")\n",
+    "\n",
+    "aci_config = AciWebservice.deploy_configuration(\n",
+    "    cpu_cores=1, \n",
+    "    memory_gb=1, \n",
+    "    auth_enabled=True,\n",
+    "    tags = {'name':'failure Prediction'},\n",
+    "    description='Heart failure prediction model'\n",
+    ")\n",
+    "\n",
+    "service = model.deploy(\n",
+    "    workspace=ws,\n",
+    "    name=\"hyperdrive-deploy\",\n",
+    "    models=[model],\n",
+    "    inference_config=inference_config,\n",
+    "    deployment_config=aci_config\n",
+    ")\n",
+    "\n",
+    "service.wait_for_deployment(show_output=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Enable Logging and check state\n",
+    "service.update(enable_app_insights=True)\n",
+    "print(service.state)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -311,7 +404,60 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# URL for the web service\n",
+    "######## ToDo:\n",
+    "scoring_uri = ''\n",
+    "# If the service is authenticated, set the key or token\n",
+    "######## ToDo:\n",
+    "key = ''\n",
+    "\n",
+    "data = {\n",
+    "  \"data\": [\n",
+    "            \"Inputs\":{\n",
+    "                \"data\": [\n",
+    "                    {\n",
+    "                        'age': 75.0, \n",
+    "                        'anaemia': 0.0, \n",
+    "                        'creatinine_phosphokinase': 582.0,\n",
+    "                        'diabetes': 0.0,\n",
+    "                        'ejection_fraction': 20.0,\n",
+    "                        'high_blood_pressure': 1.0,\n",
+    "                        'platelets': 265000.0,\n",
+    "                        'serum_creatinine': 1.9,\n",
+    "                        'serum_sodium': 130.0,\n",
+    "                        'sex': 1.0,\n",
+    "                        'smoking': 0.0,\n",
+    "                        'time': 4.0          \n",
+    "                    }\n",
+    "                ]   \n",
+    "            },\n",
+    "            \"GlobalParameters\": {\n",
+    "            \"method\": \"predict\"\n",
+    "            }\n",
+    "        ]\n",
+    "\n",
+    "}\n",
+    "# Convert to JSON string\n",
+    "input_data = json.dumps(data)\n",
+    "output = service.run(input_data)\n",
+    "\n",
+    "# Set the content type\n",
+    "headers = {'Content-Type': 'application/json'}\n",
+    "\n",
+    "# If authentication is enabled, set the authorization header\n",
+    "headers['Authorization'] = f'Bearer {key}'\n",
+    "\n",
+    "# Make the request and display the response\n",
+    "resp = requests.post(\n",
+    "    scoring_uri, \n",
+    "    input_data, \n",
+    "    headers=headers\n",
+    "    )\n",
+    "    \n",
+    "print(\"prediction \", resp.json())\n",
+    "# print(output)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -325,7 +471,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Print the logs of the web service\n",
+    "print(service.get_logs())\n",
+    "\n",
+    "# Delete the service\n",
+    "service.delete()"
+   ]
   },
   {
    "cell_type": "markdown",
