New SKLearn environment

--- a/starter_file/automl.ipynb
+++ b/starter_file/automl.ipynb
@@ -335,8 +335,15 @@
     "best_run.download_file(constants.CONDA_ENV_FILE_PATH, 'myenv.yml')\n",
     "print(model.name, model.id, model.version, sep='\\t')\n",
     "\n",
-    "env = Environment.from_conda_specification('myenv', 'myenv.yml')\n",
-    "inference_config = InferenceConfig(entry_script='score.py', environment=env)\n",
+    "# Setup environment for your training run\n",
+    "sklearn_env = Environment.from_conda_specification(\n",
+    "    name='sklearn-env', \n",
+    "    file_path='conda_dependencies.yml'\n",
+    ")\n",
+    "inference_config = InferenceConfig(\n",
+    "    entry_script='score_automl.py', \n",
+    "    environment=env\n",
+    ")\n",
     "\n",
     "aci_config = AciWebservice.deploy_configuration(\n",
     "    cpu_cores=1, \n",
