Register Model in separate field

--- a/starter_file/automl.ipynb
+++ b/starter_file/automl.ipynb
@@ -332,9 +332,16 @@
     "    workspace=ws,\n",
     "    model_name = \"best-automl-model\", \n",
     "    model_path = './best-automl-model.pkl')\n",
-    "best_run.download_file(constants.CONDA_ENV_FILE_PATH, 'myenv.yml')\n",
-    "print(model.name, model.id, model.version, sep='\\t')\n",
-    "\n",
+    "#best_run.download_file(constants.CONDA_ENV_FILE_PATH, 'myenv.yml')\n",
+    "print(model.name, model.id, model.version, sep='\\t')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Setup environment for your training run\n",
     "sklearn_env = Environment.from_conda_specification(\n",
     "    name='sklearn-env', \n",
