Register model in separate field

--- a/starter_file/hyperparameter_tuning.ipynb
+++ b/starter_file/hyperparameter_tuning.ipynb
@@ -355,8 +355,16 @@
     "    model_path = './best-hyperdrive-model.pkl')\n",
     "\n",
     "#best_run.download_file(constants.CONDA_ENV_FILE_PATH, 'conda_dependencies.yml')\n",
-    "print(model.name, model.id, model.version, sep='\\t')\n",
-    "\n",
+    "print(model.name, model.id, model.version, sep='\\t')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Deploy the model\n",
     "inference_config = InferenceConfig(\n",
     "    entry_script='score_hyperdrive.py', \n",
     "    environment=sklearn_env\n",
